force-app/main/default/objects/refedge__Reference_Refresh_Update__c/refedge__Reference_Refresh_Update__c.object-meta.xml
<CustomObject>
    <description>Custom object to store Reference Refresh Updates(Bound 10)</description>
    <label>Profile Update Detail</label>
    <nameField>
        <displayFormat>UD-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Profile Update Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>