force-app/main/default/objects/refedge__Reference_Refresh_Update__c/fields/refedge__Changed_From__c.field-meta.xml
<CustomField>
    <fullName>refedge__Changed_From__c</fullName>
    <label>Removed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>