force-app/main/default/objects/refedge__Reference_Refresh_Update__c/listViews/refedge__All_Updates.listView-meta.xml
<ListView>
    <fullName>refedge__All_Updates</fullName>
    <columns>NAME</columns>
    <columns>refedge__Account__c</columns>
    <columns>refedge__Contact__c</columns>
    <columns>refedge__Accept_Reject__c</columns>
    <columns>refedge__Referenceability__c</columns>
    <columns>refedge__Attribute__c</columns>
    <columns>refedge__Added__c</columns>
    <columns>refedge__Changed_To__c</columns>
    <columns>refedge__No_Change__c</columns>
    <columns>refedge__No_change_value__c</columns>
    <columns>refedge__Removed__c</columns>
    <columns>refedge__Changed_From__c</columns>
    <columns>refedge__Field_Api_Name_To_Be_Updated__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Updates</label>
    <language>en_US</language>
</ListView>